fix: Files.readString 为 Java 11+ API，替换为 Java 8 兼容的 Files.readAllBytes